--- a/.github/workflows/generate-installer.yml
+++ b/.github/workflows/generate-installer.yml
@@ -30,7 +30,7 @@ env:
 jobs:
   build:
     runs-on: macos-latest
-    if: github.repository == 'https://github.com/ThatUniPanda/Download-macOS'
+    if: github.repository == 'https://github.com/ThatUniPanda/Download-macOS.git'
     steps:
       - uses: actions/checkout@v4
       
